<?xml version="1.0"?>
<package format="3">
  <name>ros2_parameters</name>
  <version>0.0.0</version>
  <description>ROS2 Parameters Example</description>

  <maintainer email="student@example.com">student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

